Bug 240635 - Export CSV File does not export P.O. Box field from contact information
Summary: Export CSV File does not export P.O. Box field from contact information
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 19:53 UTC by Russ Fineman
Modified: 2010-08-16 18:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Russ Fineman 2010-06-03 19:53:47 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

Exported a personal addressbook to a CSV file. Opening CSV file with with Calc, no Post.Office.Boxes in the contacts Location/Post.Ofiice.Box field were exported. Regular addresses in the Location/Street field were.

Reproducible: Didn't try

Steps to Reproduce:
1. from Kontact Select Contacts
3. Select File Export
4. Pick Export CSV File 
5. Select contacts from (and pick all contact from (addressbook under personal contacts to export).
6. OK Select where to save it.
7. open Calc and select the CSV file to open, select inport text
8. First row is the field heading imported. There is no Post Office Box field. But street address etc are there and all other address information is there. .  


Actual Results:  
No Post Office Box field

Expected Results:  
Need Post office box field since that is not entered in the address field. Or if it should be in the address box field, what is the purpose of the Post Office box field, and it should be documented.

OS: Linux (x86_64) release 2.6.31.12-0.2-desktop
Compiler: gcc
openSUSE 11.2, KDE 4.4.3, Kontact 4.4.3, Contacts 4.4.3.
libqt4-x11-4.6.3+4.6.20100427-1.2.x86_64 

Intel Core 2 Dual E7200 | 4 GB RAM | GeForce 8400 GS | 320GB Disc (2) |
Comment 1 Tobias Koenig 2010-06-17 23:15:36 UTC
SVN commit 1139252 by tokoe:

Add Post Office Box field for home and work address

BUG: 240635


 M  +30 -0     contactfields.cpp  
 M  +2 -0      contactfields.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1139252
Comment 2 Russ Fineman 2010-06-17 23:51:49 UTC
Thanks I look at SVN and learn hown to use it.
Comment 3 Russ Fineman 2010-08-16 18:54:20 UTC
This is fixed in KDE 4.5.0 but other problems have been interduced. Will open new bug report.