Add Post Office Box field for home and work address

BUG: 240635

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1139252